--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "@types/redux-logger": "^3.0.9",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "2.7.1",
     "sass": "^1.55.0"
