--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^18.11.4",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "babel-plugin-macros": "^3.1.0",
     "eslint": "8.22.0",
     "firebase": "^9.12.1",
     "localforage": "^1.10.0",
@@ -28,6 +29,7 @@
     "reselect": "^4.1.6",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.6",
+    "typed-redux-saga": "^1.5.0",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
