--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^18.11.4",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@types/styled-components": "^5.1.26",
     "babel-plugin-macros": "^3.1.0",
     "eslint": "8.22.0",
     "firebase": "^9.12.1",
